--- a/src/app/pizza/pizza.page.html
+++ b/src/app/pizza/pizza.page.html
@@ -1,9 +1,31 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>pizza</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Pizza</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-card>
+    <!-- <img src="./madison.jpg" /> -->
+    <img src="{{pizza.picture}}">
+    <ion-card-header>
+      <ion-card-subtitle>{{pizza.price}} €</ion-card-subtitle>
+      <ion-card-title>{{pizza.name}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-list-header lines="inset">
+          <ion-label>Les ingrédients</ion-label>
+        </ion-list-header>
+        <ion-item *ngFor="let ingredient of pizza.ingredients">
+          <ion-label>{{ingredient}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+  
 
 </ion-content>
