--- a/src/app/pizza/pizza.page.scss
+++ b/src/app/pizza/pizza.page.scss
@@ -1,3 +1,22 @@
 ion-menu-button {
   color: var(--ion-color-primary);
 }
+
+ion-card-header {
+  width: 100%;
+  height: 85px;
+}
+
+img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+.title {
+  float: left;
+}
+
+ion-button {
+  float: right;
+}
