--- a/src/app/pizza/list-pizzas/list-pizzas.page.html
+++ b/src/app/pizza/list-pizzas/list-pizzas.page.html
@@ -8,5 +8,16 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-card *ngFor="let pizza of pizzas">
+    <img src="{{pizza.picture}}">
+    <ion-card-header>
+      <div class="title">
+        <ion-card-subtitle>{{pizza.price}} €</ion-card-subtitle>
+        <ion-card-title>{{pizza.name}}</ion-card-title>
+      </div>
+      <ion-button>
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-card-header>
+  </ion-card>
 </ion-content>
