lien page liste + details pizza

--- a/src/app/pizza/detail-pizza/detail-pizza.page.html
+++ b/src/app/pizza/detail-pizza/detail-pizza.page.html
@@ -3,6 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <!-- <ion-buttons class="quit" slot="end" routerLink="/pizza">X</ion-buttons> -->
+    <ion-buttons slot="end">
+      <ion-back-button defaultHref="/pizza" text="X" icon=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Pizza</ion-title>
   </ion-toolbar>
 </ion-header>
