--- a/src/app/pizza/detail-pizza/detail-pizza.page.scss
+++ b/src/app/pizza/detail-pizza/detail-pizza.page.scss
@@ -1,5 +1,9 @@
-ion-menu-button {
+ion-menu-button, .quit {
     color: var(--ion-color-primary);
+}
+
+.quit {
+  margin-right: 10px;
 }
   
 ion-card-header {
