--- a/src/app/pizza/list-pizzas/list-pizzas.page.html
+++ b/src/app/pizza/list-pizzas/list-pizzas.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card *ngFor="let pizza of pizzas">
+  <ion-card *ngFor="let pizza of pizzas" routerLink="/pizza/{{pizza.id}}">
     <img src="{{pizza.picture}}">
     <ion-card-header>
       <div class="title">
