--- a/src/app/pizza/detail-pizza/detail-pizza.page.html
+++ b/src/app/pizza/detail-pizza/detail-pizza.page.html
@@ -1,40 +1,39 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <!-- <ion-buttons class="quit" slot="end" routerLink="/pizza">X</ion-buttons> -->
-    <ion-buttons slot="end">
-      <ion-back-button defaultHref="/pizza" text="X" icon=""></ion-back-button>
-    </ion-buttons>
-    <ion-title>Pizza</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <!-- <ion-buttons class="quit" slot="end" routerLink="/pizza">X</ion-buttons> -->
+        <ion-buttons slot="end">
+            <ion-back-button defaultHref="/pizza" text="X" icon=""></ion-back-button>
+        </ion-buttons>
+        <ion-title>Pizza</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <!-- <img src="./madison.jpg" /> -->
-    <img src="{{pizza.picture}}">
-    <ion-card-header>
-      <div class="title">
-        <ion-card-subtitle>{{pizza.price}} €</ion-card-subtitle>
-        <ion-card-title>{{pizza.name}}</ion-card-title>
-      </div>
-      <ion-button>
-        <ion-icon name="add-outline"></ion-icon>
-      </ion-button>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-list>
-        <ion-list-header lines="inset">
-          <ion-label>Les ingrédients</ion-label>
-        </ion-list-header>
-        <ion-item *ngFor="let ingredient of pizza.ingredients">
-          <ion-label>{{ingredient}}</ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-card-content>
-  </ion-card>
-  
+    <ion-card *ngIf="pizza">
+        <img src="{{pizza.photo}}">
+        <ion-card-header>
+            <div class="title">
+                <ion-card-subtitle>{{pizza.prix}} €</ion-card-subtitle>
+                <ion-card-title>{{pizza.nom}}</ion-card-title>
+            </div>
+            <ion-button>
+                <ion-icon name="add-outline"></ion-icon>
+            </ion-button>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-list>
+                <ion-list-header lines="inset">
+                    <ion-label>Les ingrédients</ion-label>
+                </ion-list-header>
+                <!-- <ion-item *ngFor="let ingredient of pizza.ingredients">
+                    <ion-label>{{ingredient}}</ion-label>
+                </ion-item> -->
+            </ion-list>
+        </ion-card-content>
+    </ion-card>
+
 
 </ion-content>
