--- a/src/app/pizza/list-pizzas/list-pizzas.page.html
+++ b/src/app/pizza/list-pizzas/list-pizzas.page.html
@@ -9,11 +9,11 @@
 
 <ion-content>
   <ion-card *ngFor="let pizza of pizzas" routerLink="/pizza/{{pizza.id}}">
-    <img src="{{pizza.picture}}">
+    <img src="{{pizza.photo}}">
     <ion-card-header>
       <div class="title">
-        <ion-card-subtitle>{{pizza.price}} €</ion-card-subtitle>
-        <ion-card-title>{{pizza.name}}</ion-card-title>
+        <ion-card-subtitle>{{pizza.prix}} €</ion-card-subtitle>
+        <ion-card-title>{{pizza.nom}}</ion-card-title>
       </div>
       <ion-button>
         <ion-icon name="add-outline"></ion-icon>
