--- a/src/app/pizza/detail-pizza/detail-pizza.page.html
+++ b/src/app/pizza/detail-pizza/detail-pizza.page.html
@@ -28,9 +28,9 @@
                 <ion-list-header lines="inset">
                     <ion-label>Les ingrédients</ion-label>
                 </ion-list-header>
-                <!-- <ion-item *ngFor="let ingredient of pizza.ingredients">
-                    <ion-label>{{ingredient}}</ion-label>
-                </ion-item> -->
+                <ion-item *ngFor="let ingredient of ingredients">
+                    <ion-label>{{ingredient.nom}}</ion-label>
+                </ion-item>
             </ion-list>
         </ion-card-content>
     </ion-card>
