--- a/src/app/pizza/detail-pizza/detail-pizza.page.scss
+++ b/src/app/pizza/detail-pizza/detail-pizza.page.scss
@@ -1,26 +1,29 @@
-ion-menu-button, .quit {
+ion-menu-button,
+.quit,
+#add {
     color: var(--ion-color-primary);
 }
 
 .quit {
-  margin-right: 10px;
+    margin-right: 10px;
 }
-  
+
 ion-card-header {
     width: 100%;
     height: 85px;
 }
-  
+
 img {
     width: 100%;
     max-width: 400px;
     height: auto;
 }
-  
+
 .title {
     float: left;
 }
-  
-ion-button {
+
+#add {
     float: right;
+    font-size: xxx-large;
 }
