--- a/src/app/pizza/list-pizzas/list-pizzas.page.html
+++ b/src/app/pizza/list-pizzas/list-pizzas.page.html
@@ -11,13 +11,11 @@
     <ion-card *ngFor="let pizza of pizzas">
         <img src="{{pizza.photo}}">
         <ion-card-header>
-            <div class="title" routerLink="/pizza/{{pizza.id}}">
+            <div class="title" routerLink="/pizzas/{{pizza.id}}">
                 <ion-card-subtitle>{{pizza.prix}} €</ion-card-subtitle>
                 <ion-card-title>{{pizza.nom}}</ion-card-title>
             </div>
-            <ion-button (click)="addPizza(pizza)">
-                <ion-icon name="add-outline"></ion-icon>
-            </ion-button>
+            <ion-icon name="add-circle" (click)="addPizza(pizza)" id="add"></ion-icon>
         </ion-card-header>
     </ion-card>
 </ion-content>
