--- a/src/app/pizza/list-pizzas/list-pizzas.page.html
+++ b/src/app/pizza/list-pizzas/list-pizzas.page.html
@@ -4,6 +4,7 @@
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
         <ion-title>Pizza</ion-title>
+        <ion-icon slot="end" name="cart" id="cart" size="large" routerLink="/cart"></ion-icon>
     </ion-toolbar>
 </ion-header>
 
