add and update ingredient

--- a/src/app/admin/list-ingredients/list-ingredients.page.html
+++ b/src/app/admin/list-ingredients/list-ingredients.page.html
@@ -4,7 +4,7 @@
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
         <ion-title>Admin Ingredients</ion-title>
-        <ion-icon slot="end" name="add-circle" id="add" size="large"></ion-icon>
+        <ion-icon slot="end" name="add-circle" id="add" size="large" routerLink="/admin/ingredients/form"></ion-icon>
     </ion-toolbar>
 </ion-header>
 
@@ -15,7 +15,8 @@
                 <ion-label>
                     {{ingredient.nom}}
                 </ion-label>
-                <ion-icon slot="end" name="create-outline" id="modify"></ion-icon>
+                <ion-icon slot="end" name="create-outline" id="modify"
+                    routerLink="/admin/ingredients/form/{{ingredient.id}}"></ion-icon>
                 <ion-item-options side="end">
                     <ion-item-option color="danger">Supprimer</ion-item-option>
                 </ion-item-options>
