--- a/src/app/admin/form-ingredient/form-ingredient.page.html
+++ b/src/app/admin/form-ingredient/form-ingredient.page.html
@@ -3,6 +3,9 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-back-button defaultHref="/admin/ingredients" text="X" icon=""></ion-back-button>
+        </ion-buttons>
         <ion-title>Admin Ingredients</ion-title>
     </ion-toolbar>
 </ion-header>
