--- a/src/app/admin/list-ingredients/list-ingredients.page.html
+++ b/src/app/admin/list-ingredients/list-ingredients.page.html
@@ -17,10 +17,11 @@
                 </ion-label>
                 <ion-icon slot="end" name="create-outline" id="modify"
                     routerLink="/admin/ingredients/form/{{ingredient.id}}"></ion-icon>
-                <ion-item-options side="end">
-                    <ion-item-option color="danger">Supprimer</ion-item-option>
-                </ion-item-options>
             </ion-item>
+            <ion-item-options side="end">
+                <ion-item-option color="danger" (click)="delIngredient(ingredient.id)">Supprimer
+                </ion-item-option>
+            </ion-item-options>
         </ion-item-sliding>
     </ion-list>
 </ion-content>
